@@ -362,13 +362,13 @@ else {
 }
 ?>
 </form>
-</div>
 
 <?php
 echo languageSelector();
 
-$validation_file = 'captionator.php';
-includeTemplate('general.footer');
+includeTemplate('info_donation-block');
+
+includeTemplate('overall.footer');
 
 if (!$GALLERY_EMBEDDED_INSIDE) { ?>
 </body>
